--- a/string-diagrams.cabal
+++ b/string-diagrams.cabal
@@ -1,4 +1,4 @@
-name:                string_diagrams
+name:                string-diagrams
 version:             1.0
 synopsis:            string diagrams generator app
 author:              Carla Diosdado
